fixed 3D model gap

--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ body {
     background: transparent;
     border-radius: 20px;
     padding: 40px;
-    margin: -150px 0px 40px 0px;
+    margin: -50px 0px 0px 0px;
     backdrop-filter: none;
     box-shadow: none;
     padding-top: 0px;
